--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ h1 {
   color: #373fff;
 }
 
-.btn{
+/* .btn{
   display:inline;
   justify-content:space-around;
   border-color:azure;
   background-color: azure;
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
-}
+} */
 h2{
   font-size:30px;
   align-items:center;
@@ -25,4 +25,32 @@ h2{
 .mission{
   background-color: #373fff;
   background-size: 700px 600px;
+}
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
 }
