--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@ body {
 }
 
 h1 {
-  font-style: italic;
+  font-family: 'Rubik Mono One', sans-serif;
   color: #373fff;
+  font-size: 50px;
 }
 
 /* .btn{
@@ -51,6 +52,6 @@ body {
 }
 
 .topnav a.active {
-  background-color: #4CAF50;
-  color: white;
+  background-color: black;
+  color: red;
 }
