--- a/style.css
+++ b/style.css
@@ -3,12 +3,14 @@
 body {
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
   margin: 2em;
+  background-color:rgb(255,0,0);opacity:0.6;
 }
 
 h1 {
   font-family: 'Rubik Mono One', sans-serif;
   color: #373fff;
   font-size: 50px;
+  background-color:rgb(255,0,0);opacity:0.6;
 }
 
 /* .btn{
