--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h1 {
 h2{
   font-size:30px;
   align-items:center;
-  color: white;
+  color: black;
 }
 .mission{
   background-color: #373fff;
@@ -26,9 +26,8 @@ h2{
 }
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: red;
-  background-color:rgb(255,0,0,0.6);
+  font-family: 'Oswald', sans-serif;
+  background-color:#FFFFFF
 }
 
 .topnav {
@@ -48,6 +47,7 @@ body {
 .topnav a:hover {
   background-color: #ddd;
   color: black;
+  font-family: 'Oswald', sans-serif;
 }
 
 .topnav a.active {
