--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ h2{
 .mission{
   background-color: #373fff;
   background-size: 700px 600px;
+  color: white
 }
 body {
   margin: 0;
@@ -31,13 +32,14 @@ body {
 }
 
 .topnav {
+  justify-content: space-around;
   overflow: hidden;
-  background-color: #333;
+  background-color: white;
 }
 
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: #373fff;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -51,6 +53,6 @@ body {
 }
 
 .topnav a.active {
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: #373fff;
 }
