--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 .topnav {
-  justify-content: space-around;
+  margin-left: 200px;
   overflow: hidden;
   background-color: white;
 }
@@ -55,4 +55,5 @@ body {
 .topnav a.active {
   background-color: white;
   color: #373fff;
+  
 }
