🍽😚 Checkpoint ./topics.html:5235506/14 ./style.css:5235636/11 ./candidates.html:5235506/201

--- a/style.css
+++ b/style.css
@@ -58,11 +58,11 @@ body {
   
 }
 
-section {
+h2 {
   
 }
 
-.joeBiden {
-  background-color: #ff6666
+.joeBiden{
+  background-color: #ff6666;
     border:
 }
