--- a/style.css
+++ b/style.css
@@ -8,33 +8,33 @@ h1 {
   font-size: 50px;
 }
 
-/* .btn{
+.btn{
   display:inline;
   justify-content:space-around;
   border-color:azure;
   background-color: azure;
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
-} */
+} 
 h2{
   font-size:30px;
   align-items:center;
   color: black;
 }
 .mission{
-  background-color: #373fff;
+  background-color: #031D44;
   background-size: 700px 600px;
-  color: white
+  color: white;
 }
 body {
   margin: 0;
   font-family: 'Oswald', sans-serif;
-  background-color:#FFFFFF
+  background-color:#FFFFF0;
 }
 
 .topnav {
   margin-left: 200px;
   overflow: hidden;
-  background-color: white;
+  
 }
 
 .topnav a {
@@ -53,16 +53,94 @@ body {
 }
 
 .topnav a.active {
-  background-color: white;
+  background-color: #ddd
   color: #373fff;
+}
+#joeBiden{
+  background-color: #D3D3D3;
+  border-radius: 25px;
+  list-style-type: none;
+}
+
+#elizabethwarren {
+  background-color: #D3D3D3;
+  border-radius: 25px;
+}
+
+#kamalaHarris {
+  background-color: #D3D3D3;
+  border-radius: 25px;
+}
+
+#peteBooty {
+  background-color: #D3D3D3;
+  border-radius: 25px;
+}
+
+#beto {
+  background-color: #D3D3D3;
+  border-radius: 25px;
+}
+.mission{
+display:inline-block;
+  height:450px;
+  width: 800px;
+  padding-left:20px;
+  padding-right:20px;
+  padding-bottom: 0px;
+  transform: translate(20px, 50px);
+  margin-left:0px;
   
 }
 
-h2 {
-  
+img#vote {
+  height:450px;
+  width:500px;
+  transform: translate(650px, -400px);
+  margin-left:230px
+}
+#activism{
+  padding-top:10px;
+  height: 600px;
+  width: 100%;
+  transform: translate(0px, -350px);
+}
+.classBrk{
+  padding-top:0px;
+
+}
+.issues{
+  display:inline
+    
+   transform: translate(200px, 350px);
+}
+img#health, img#immigration, img#loans{
+  width:500px;
+  height:300px;
+  transform: translate(0px, -420px);
+  float: left;
+  width: 33.33%
+}
+/* maybe resize some of the stuff first so it all fits on the page idk and also we need an about section too so maybe in between the blue and the
+bottom photo? */
+#para{
+  margin-left:
 }
 
-.joeBiden{
-  background-color: #ff6666;
-    border:
+.topics {
+  transform: translate(0px, -410px);
+}
+
+footer {
+  transform: translate(0px, -320px);
+}
+#titleM{
+  color: white; 
+  font-size: 50px;
+}
+#para{
+font-size: 25px;
+}
+#gra{
+  font-size: 20px;
 }
