👳😼 Checkpoint ./topics.html:5235500/756 ./style.css:5235636/14

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ bottom photo? */
 .topics {
   transform: translate(0px, -410px);
 /*   position: relative;  */
-  background-color: #031D44;
+  background-color: #ff4d4d;
   background-size: 700px 600px;
   color: white;
   width: 600px;
