--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ bottom photo? */
 .topics {
   transform: translate(0px, -410px);
 /*   position: relative;  */
-  background-color: #ff4d4d;
+  background-color: #ff3333;
   background-size: 700px 600px;
   color: white;
   width: 1400px;
