--- a/style.css
+++ b/style.css
@@ -57,8 +57,7 @@ body {
   color: #373fff;
 }
 #joeBiden{
-  background-color: #031D44;
-  border-radius: 25px;
+  background-color: #ff3333;
   color: white;
 }
 
@@ -68,27 +67,29 @@ body {
 
 #elizabethwarren {
   background-color: white;
-  border-radius: 25px;
+  border: 4px solid blue;
+  padding: 
 }
 
 #kamalaHarris {
-  background-color: #ff3333;
-  border-radius: 25px;
+  background-color: #031D44;
+  color: white;
 }
 
 #peteBooty {
-  background-color: #D3D3D3;
-  border-radius: 25px;
+  background-color: #ff3333;
+  color: white;
 }
 
 #beto {
-  background-color: #D3D3D3;
-  border-radius: 25px;
+  background-color: white;
+  border: 4px solid red;
+  padding: 
 }
 
 #castro {
-  background-color: #D3D3D3;
-  border-radius: 25px;
+  background-color: #031D44;
+  color: white;
 }
 
 .mission{
