--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ body {
 #joeBiden{
   background-color: #ff3333;
   color: white;
+  display: inline-block;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 
 }
 
 .list {
@@ -68,7 +72,9 @@ body {
 #elizabethwarren {
   background-color: white;
   border: 4px solid blue;
-  padding: 
+  display: inline-block;
+  padding-right: 200px;
+  padding-left: 200px;
 }
 
 #kamalaHarris {
