--- a/style.css
+++ b/style.css
@@ -59,10 +59,6 @@ body {
 #joeBiden{
   background-color: #ff3333;
   color: white;
-  display: inline-block;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-bottom: 
 }
 
 .list {
@@ -80,6 +76,7 @@ body {
 #kamalaHarris {
   background-color: #031D44;
   color: white;
+  width: 1200px;
 }
 
 #peteBooty {
@@ -90,7 +87,6 @@ body {
 #beto {
   background-color: white;
   border: 4px solid red;
-  padding: 
 }
 
 #castro {
@@ -189,3 +185,14 @@ font-size: 25px;
   width: 550px;
   height: 400px;
 }
+#immi{
+display:inline-block;
+  
+  }
+  
+#chart{ 
+height:500px;
+width:400px;
+transform: translate(650px, -400px);
+  
+  }
