--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h2{
 }
 .mission{
   background-color: #031D44;
-  background-size: 700px 600px;
+  background-size: 600px 600px;
   color: white;
 }
 body {
@@ -59,6 +59,7 @@ body {
 #joeBiden{
   background-color: #ff3333;
   color: white;
+  width: 1200px; 
 }
 
 .list {
@@ -68,9 +69,7 @@ body {
 #elizabethwarren {
   background-color: white;
   border: 4px solid blue;
-  display: inline-block;
-  padding-right: 200px;
-  padding-left: 200px;
+  width: 
 }
 
 #kamalaHarris {
@@ -97,7 +96,7 @@ body {
 .mission{
 display:inline-block;
   height:450px;
-  width: 800px;
+  width: 770px;
   padding-left:20px;
   padding-right:20px;
   padding-bottom: 0px;
@@ -191,8 +190,20 @@ display:inline-block;
   }
   
 #chart{ 
-height:500px;
-width:400px;
-transform: translate(650px, -400px);
+height:450px;
+width:600px;
+transform: translate(800px, -350px);
   
   }
+/* #gun{
+display:inline-block;
+  height:450px;
+  width: 770px;
+  padding-left:20px;
+  padding-right:20px;
+  padding-bottom: 0px;
+  transform: translate(20px, 50px);
+  margin-left:0px;
+  position:relative;
+   
+} */
