--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ img#vote {
   width: 100%;
 /*   transform: translate(0px, -350px); */
   position: relative;
+  transform: translate(0, -400px);
 /*   top: 500px; */
 }
 .classBrk{
@@ -158,7 +159,7 @@ bottom photo? */
 }
 
 footer {
-/*   transform: translate(0px, -320px); */
+transform: translate(0px, -380px);
   position: relative; 
   border: 4px black;
 }
@@ -222,3 +223,13 @@ ont-size: 30px;
   padding-right:10px;
   padding-left:10px;
 }
+#kaname,#caname{
+  color:white;
+}
+
+#control {
+  height: 400px;
+  width: 500px;
+  transform: translate(-590px, -330px);
+}
+#ourbio
