👜🍜 Checkpoint ./topics.html:5235500/3:5235506/424:5235636/157 ./style.css:5235500/11:5235506/59:5235636/149

--- a/style.css
+++ b/style.css
@@ -245,3 +245,13 @@ font-size: 30px;
 #guns{
   font-size: 30px; 
 }
+
+#budget {
+  height: 400px;
+  width: 600px;
+  transform: translate(800px, -100px);
+}
+#education{
+  background-color: #031D44; 
+  color: white; 
+}
